components/card/_style.scss
/*********************************************************
  Card / Card Profile
*********************************************************/


// Card Profile
$profile-img-width: 105px;

.card-profile {
  margin-top: rem(125);
  text-align: center;
  background-color: $color__border;
  border-radius: $border-radius;
  @include media-breakpoint-up(md) {
    margin-top: rem(150);
  }
}

.card-profile--has-img {
  position: relative;
  padding-top: rem($profile-img-width - 60); // padding for img
}

.card-profile--has-img img {
  position: absolute;
  width: $profile-img-width;
  height: auto;
  top: calc(-0% - (#{$profile-img-width} / 2) );
  left: calc(50% - (#{$profile-img-width} / 2) );
  background-repeat: no-repeat;
  background-size: cover;
  @include media-breakpoint-up(md) {
    width: $profile-img-width + 25px;
    top: calc(-0% - (#{$profile-img-width + 25} / 2) );
    left: calc(50% - (#{$profile-img-width + 25} / 2) );
  }
}

.card__body {
  padding: rem(20);
}

.card__title,
.card__text {
  margin-bottom: rem(1);
}

.card__title--bold {
  font-weight: bold;
}

.card__title--employee-title {
  padding-top: rem(10);
}

// Card Nav
.card-nav > .row {
  background-color: $color__border--light;
}

.card-nav--bottom > .row {
  background-color: $color__secondary;
  border-bottom-left-radius: $border-radius;
  border-bottom-right-radius: $border-radius;
}

.card-nav--scroller > .row {
  flex-wrap: nowrap;
  overflow-x: auto; 
  -webkit-overflow-scrolling: touch;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  &::-webkit-scrollbar { display: none;}
}

.card-nav--scroller .card-nav__col {
  flex: 1 0 auto; //grow, shrink, basis
}

.card-nav__col {
  min-width: 20%;
  padding: 0;
  border-right: 1px solid $color__border;
  &:last-child {
    border-right: none;
  }
}

.card-nav__icon {
  display: block;
  color: $color__primary;
}

.card-nav__title {
  color: $color__text;
}

.card-nav__btns {
  a {
    padding: rem(5);
    font-size: rem(12);
    border-radius: 0;
    @include media-breakpoint-up(md) {
      font-size: rem(14);
    }
    &:hover, &:focus {
      background: $color__border;
      outline: none;
      box-shadow: none;
    }
  }
}

.card-nav--bottom .card-nav__btns {
  a {
    padding: rem(17);
    color: $color__white;
    background: $color__secondary;
    border-bottom-left-radius: $border-radius;
    border-bottom-right-radius: $border-radius;
  }
  a:hover, a:focus {
    background: $color__secondary--dark;
  }
}

.card-nav--bottom .card-nav__col {
  border-color: lighten($color__secondary, 5%);
}

